aggiornamento Pianificazione delle Attività

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -68,7 +68,7 @@
 	Il gruppo \hx ha deciso di rispettare le seguenti scadenze:
 		\begin{itemize}
 			\item \textbf{Revisione dei Requisiti}: 24-01-2017;
-			\item \textbf{Revisione di Progettazione}: 13-03-2017;
+			\item \textbf{Revisione di Progettazione}: 13-03-2017 presentandosi con Revisione di Progettazione minima;
 			\item \textbf{Revisione di Qualifica}: 18-04-2017;
 			\item \textbf{Revisione di Accettazione}: 15-05-2017.
 		\end{itemize}
@@ -324,7 +324,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 Per eseguire una più accurata pianificazione progettuale, il \gloss{team} ha deciso di suddividere il progetto nelle seguenti fasi:
 \begin{itemize}
 	\item \textbf{Analisi dei Requisiti (AR)};
-	\item \textbf{"Consolidamento/ampliamento" dei Requisiti (C/AR)};
+	\item \textbf{Analisi dei Requisiti Incrementale (ARI)};
 	\item \textbf{Progettazione Architetturale (PA)};
 	\item \textbf{Progettazione di Dettaglio e Codifica (PDC)};
 	\item \textbf{Verifica e Validazione (VV)}.
@@ -346,7 +346,7 @@ questi diagrami(es milestone ecc)".
 		\item \textbf{Analisi dei Requisiti}: in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente
 		il capitolato scelto con lo \textit{Studio di Fattibilità};
 		\item \textbf{Piano di Progetto}: questo documento è redatto dal \textit{Responsibile di Progetto} che organizza tutte le attività e stima le risorse,
-		costi e tempi necessari	per lo svolgimento del progetto;
+		costi e tempi necessari per lo svolgimento del progetto;
 		\item \textbf{Piano di Qualifica}: questo documento è redatto dal \textit{Verificatore} che individua tutte le strategie di verifica e validazione che
 		il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
 		\item \textbf{Glossario}: questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la 
@@ -355,39 +355,39 @@ questi diagrami(es milestone ecc)".
 		alla gara d'appalto.
 	\end{itemize}
 	[Gantt eccetera]
-	\subsubsection{"cons/amp" dei Requisiti}
+	\subsubsection{Analisi dei Requisiti Incrementale}
 	\textbf{Periodo}: dal 24-01-2017 al xx-02-2017.
 	\\ Questo periodo inizia in concomitanza con la \textit{Revisione dei Requisiti} e termina con una \gloss{milestone} interna che corrisponde all'inizio
 	della \textit{Progettazione Architetturale}. In questo periodo, il gruppo mira ad integrare la documentazione precedentemente prodotta (in modo particolare
 	l'\textit{Analisi dei Requisiti}), con le correzioni suggerite durante la \textit{Revisione dei Requisiti}.
 	[Gantt eccetera]
 	\subsubsection{Progettazione Architetturale}
-	\textbf{Periodo}: dal xx-02-2017 al 13-03-2017.	
-	\\ Questo periodo inizia subito dopo \textit{"cons/amp" dei Requisiti} e si conclude con la consegna dei documenti per la 
-	\textit{Revisione di Progettazione di "min/max"}.
-	La \textit{Progettazione Architetturale} prevede la stesura della progettazione a "basso/alto" livello e predeve lo svolgimento delle seguenti attività:
+	\textbf{Periodo}: dal xx-02-2017 al 06-03-2017.	
+	\\ Questo periodo inizia subito dopo \textit{Analisi dei Requisiti Incrementale} e si conclude con la consegna dei documenti per la 
+	\textit{Revisione di Progettazione}.
+	La \textit{Progettazione Architetturale} prevede la stesura della progettazione ad alto  livello e predeve lo svolgimento delle seguenti attività:
 	\begin{itemize}
 		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti della \textit{Progettazione Architetturale};
-		\item \textbf{Definizione di Prodotto/Specifica Tecnica}:............   .
+		\item \textbf{Specifica Tecnica}: in questa attività viene stilato questo documento che descrive le scelte progettuali ad alto livello che il prodotto dovrà rispettare.
 	\end{itemize}
 	[Gantt eccetera]
 	\subsubsection{Progettazione di Dettaglio e Codifica}
-	\textbf{Periodo}: dal 13-03-2017 al 18-04-2017.	
+	\textbf{Periodo}: dal 07-03-2017 al 11-04-2017.	
 	\\ Questo perido inizia subito dopo la \textit{Progettazione Architetturale} e si conclude con la consegna dei documenti per la \textit{Revisione di Qualifica"}.
-	La \textit{Progettazione di Dettaglio e Codifica} prevede la stesura del \textit{Definizione di Prodotto/Specifica Tecnica} e successivamente si inizierà
+	La \textit{Progettazione di Dettaglio e Codifica} prevede la stesura del \textit{Definizione di Prodotto} e successivamente si inizierà
 	con la fase di codifica.
 	Le attività da svolgere sono le seguenti:
 	\begin{itemize}
 		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti basandosi sui risultati della \textit{Revisione di Prodotto}; 
-		\item \textbf{Deﬁnizione di Prodotto o Specifica Tecnica}: blabla;
-		\item \textbf{Codiﬁca}: in questa attività si procede allo sviluppo del codice del software da parte dei programmatori, attenendosi a quanto è riportato nella \textit{Deﬁnizione di Prodotto}; 
+		\item \textbf{Definizione di Prodotto}: in questa attività viene stilato questo documento che contiene la struttura e la relazione tra i vari componenti del prodotto, in base a quanto riportato nel documento \textit{Specifica Tecnica};
+		\item \textbf{Codifica}: in questa attività si procede allo sviluppo del codice del software da parte dei programmatori, attenendosi a quanto è riportato nella \textit{Definizione di Prodotto}; 
 		\item \textbf{Manuale Utente}: in questa attività si crea il documento destinato all'utente finale, che ha lo scopo di fornire le linee guida per il corretto utilizzo del software.
 	\end{itemize}
 	[Gantt eccetera]
 	\subsubsection{Verifica e Validazione}
-	\textbf{Periodo}: dal 18-04-2017 al 15-05-2017.
+	\textbf{Periodo}: dal 12-04-2017 al 14-05-2017.
 	\\ Questo perido inizia subito dopo la \textit{Progettazione di Dettaglio e Codifica} e si conclude con la consegna del prodotto finale alla \textit{Revisione di Accettazione}.
-	In questo periodo vengono effettuati i test del sowtfare, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\testit{Analisi dei Requisiti}.
+	In questo periodo vengono effettuati i test del software, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\textit{Analisi dei Requisiti}.
 	Le attività da svolgere sono:
 	\begin{itemize}
 		\item \textbf{Test}: effettuare dei test per il collaudo del sistema;
