aggiornamento piano di progetto

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -33,19 +33,16 @@
 \end{itemize}
 
 	\subsection{Scopo del prodotto}
-	Lo scopo del prodotto è quello di realizzare un editor di diagrammi \gloss{UML} che implementi il diagramma delle classi e il diagramma delle attività.
-	Il sistema dovrà fornire le seguenti funzionalità:
+	Lo scopo del prodotto è quello di realizzare un editor di diagrammi \gloss{UML} che implementi il diagramma delle classi e il diagramma delle attività.	Il sistema dovrà fornire le seguenti funzionalità:
 	\begin{itemize}
 		\item salvare un progetto in un file "da definire";
 		\item fornire all'utente, attraverso un interfaccia, la possibilità di realizzare i propri diagrammi;
 		\item generare un applicativo \gloss{Java} dai diagrammi forniti dall'utente;
 	\end{itemize}
-	Il software finale dunque, sarà una \gloss{Web Application} realizzata con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} \gloss{lato client} e
-	"da decidere!!!!!!!!!!!!Java o Javascript \gloss{lato server}.
+	Il software finale dunque, sarà una \gloss{Web Application} realizzata con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} \gloss{lato client} e "da decidere!!!!!!!!!!!!Java o Javascript \gloss{lato server}.
 	
 	\subsection{Glossario}
-	Al fine di evitare ogni ambiguità circa i termini tecnici dominio del progetto, gli acronimi e le parole che necessitano di ulteriori spiegazioni 
-	saranno nei vari documenti marcate con il pedice \gloss{} e quindi presenti nel documento \textit{Glossario}.
+	Al fine di evitare ogni ambiguità circa i termini tecnici dominio del progetto, gli acronimi e le parole che necessitano di ulteriori spiegazioni saranno nei vari documenti marcate con il pedice \gloss{} e quindi presenti nel documento \textit{Glossario}.
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
 		\begin{itemize}
@@ -61,7 +58,11 @@
 		\subsubsection{Informativi}
 		\begin{itemize}
 			\item \textbf{Slides del corso di Ingegneria del Software}:
-			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/}{http://www.math.unipd.it/~tullio/IS-1/2016/}.
+			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/}{http://www.math.unipd.it/~tullio/IS-1/2016/};
+			\item \textbf{Ingegneria del Software - Ian Sommerville - Ottava Edizione}:
+			\begin{enumerate}
+				\item Capitolo 4: Software Processes;
+			\end{enumerate}
 		\end{itemize}
 
 	\subsection{Scadenze}
@@ -237,7 +238,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item \textbf{Probabilità di occorrenza}: bassa;
 			\item \textbf{Grado di pericolosità}: medio;
 			\item \textbf{Riconoscimento}: ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
-			\item \textbf{Trattamento}: prima di qualunque spostamento, è obbligatorio scaricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibile ma per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su 					almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’Amministratore riportare tale macchina in uno stato 				funzionante nel minor tempo possibile; 
+			\item \textbf{Trattamento}: prima di qualunque spostamento, è obbligatorio scaricare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibile ma per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico e in caso di malfunzionamenti sarà compito dell’Amministratore riportare tale macchina in uno stato funzionante nel minor tempo possibile; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}: il rischio non si è mai verificato.
@@ -246,11 +247,11 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 	\subsection{Livello del personale}
 		\subsubsection{Problemi tra componenti del team}
 		\begin{itemize}
-			\item \textbf{Descrizione}: i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un 				clima non proficuo;
+			\item \textbf{Descrizione}: i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi generando quindi un clima non proficuo;
 			\item \textbf{Probabilità di occorrenza}: bassa;
 			\item \textbf{Grado di pericolosità}: alto;
 			\item \textbf{Riconoscimento}: il Responsabile deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia nascendo un dissidio fra uno o più membri;
-			\item \textbf{Trattamento}: il Responsabile provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un 				ambiente di lavoro il meno stressante possibile;
+			\item \textbf{Trattamento}: il Responsabile provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile;
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}: il rischio non si è mai verificato.
@@ -270,11 +271,11 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 		\end{itemize}
 		\subsubsection{Problemi di inesperienza}
 		\begin{itemize}
-			\item \textbf{Descrizione}: l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere 					apprese;
+			\item \textbf{Descrizione}: l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste richiedono tempo per poter essere apprese;
 			\item \textbf{Probabilità di occorrenza}: alta;
 			\item \textbf{Grado di pericolosità}: alto;
-			\item \textbf{Riconoscimento}: quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al Responsabile che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 			impiegarlo al meglio;
-			\item \textbf{Trattamento}: ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il Responsabile dovrà 						preparare un piano di studi per compensare ogni tipo di lacuna;
+			\item \textbf{Riconoscimento}: quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al Responsabile che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 	impiegarlo al meglio;
+			\item \textbf{Trattamento}: ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il Responsabile dovrà preparare un piano di studi per compensare ogni tipo di lacuna;
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}:  il rischio si è verificato soprattutto nella prima fase.
@@ -283,11 +284,11 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 	\subsection{Livello organizzativo}
 		\subsubsection{Pianificazione Errata}
 		\begin{itemize}
-			\item \textbf{Descrizione}: durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato;
+			\item \textbf{Descrizione}: durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro del \gloss{team};
 			\item \textbf{Probabilità di occorrenza}: media;
 			\item \textbf{Grado di pericolosità}: alto;
 			\item \textbf{Riconoscimento}: la caratteristica dinamica del rischio impone che si debba controllare lo stato delle attività nel programma di project management periodicamente, in modo da verificare eventuali ritardi nello sviluppo delle attività; 
-			\item \textbf{Trattamento}: si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto; 
+			\item \textbf{Trattamento}: si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto e una fase di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
 				\item \textbf{Analisi dei requisiti}:  il rischio non si è mai verificato.
@@ -307,12 +308,12 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\end{itemize}
 		\end{itemize}
 	\subsection{Livello della valutazione dei costi}
-		\subsection{Errore nelle previsioni}
+		\subsubsection{Errore nelle previsioni}
 		\begin{itemize}
 			\item \textbf{Descrizione}: è possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
 			\item \textbf{Probabilità di occorrenza}: media;
 			\item \textbf{Grado di pericolosità}: medio;
-			\item \textbf{Riconoscimento}: quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il Responsabile monitori con grande attenzione il programma di project management e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
+			\item \textbf{Riconoscimento}: quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il \textit{Responsabile} monitori con grande attenzione il programma di project management e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
 			\item \textbf{Trattamento}: è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
 			\item \textbf{Attuazione nel periodo}:
 			\begin{itemize}
@@ -338,45 +339,30 @@ questi diagrami(es milestone ecc)".
 	\\ Questo periodo inizia successivamente alla formazione del gruppo e finisce in corrispondenza della consegna dei documenti per la \textit{Revisione dei Requisiti}.
 	Questo perido prevede che vengano stilati i seguenti documenti:
 	\begin{itemize}
-		\item \textbf{Norme di Progetto}: in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero
-		svolgimento delle attività. Tale documento è redatto dall'\textit{Amministratore}, mentre il \textit{Verificatore} ha il compito di certificare che 
-		tali norme siano state rispettate da tutto il gruppo;
-		\item \textbf{Studio di Fattibilità}: in questo documento vengono analizzati i vari capitolati proposti. In ognuno di esso, è contenuta l'analisi
-		eseguita dal \gloss{team} che consiste nel "guardare il documento per scegliere cosa scrivere";
-		\item \textbf{Analisi dei Requisiti}: in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente
-		il capitolato scelto con lo \textit{Studio di Fattibilità};
-		\item \textbf{Piano di Progetto}: questo documento è redatto dal \textit{Responsibile di Progetto} che organizza tutte le attività e stima le risorse,
-		costi e tempi necessari per lo svolgimento del progetto;
-		\item \textbf{Piano di Qualifica}: questo documento è redatto dal \textit{Verificatore} che individua tutte le strategie di verifica e validazione che
-		il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
-		\item \textbf{Glossario}: questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la 
-		spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
-		\item \textbf{Lettera di presentazione}: questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare
-		alla gara d'appalto.
+		\item \textbf{Norme di Progetto}: in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\textit{Amministratore}, mentre il \textit{Verificatore} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
+		\item \textbf{Studio di Fattibilità}: in questo documento vengono analizzati i vari capitolati proposti. Per ogni capitolato, è stato analizzato il dominio applicativo/tecnologico e sono state inserite delle considerazioni in merito agli aspetti positivi e negativi;
+		\item \textbf{Analisi dei Requisiti}: in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente	il capitolato scelto con lo \textit{Studio di Fattibilità};
+		\item \textbf{Piano di Progetto}: questo documento è redatto dal \textit{Responsibile di Progetto} che organizza tutte le attività e stima le risorse, costi e tempi necessari per lo svolgimento del progetto;
+		\item \textbf{Piano di Qualifica}: questo documento è redatto dal \textit{Verificatore} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
+		\item \textbf{Glossario}: questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
+		\item \textbf{Lettera di presentazione}: questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
 	\end{itemize}
 	[Gantt eccetera]
 	\subsubsection{Analisi dei Requisiti Incrementale}
-	\textbf{Periodo}: dal 24-01-2017 al xx-02-2017.
-	\\ Questo periodo inizia in concomitanza con la \textit{Revisione dei Requisiti} e termina con una \gloss{milestone} interna che corrisponde all'inizio
-	della \textit{Progettazione Architetturale}. In questo periodo, il gruppo mira ad integrare la documentazione precedentemente prodotta (in modo particolare
-	l'\textit{Analisi dei Requisiti}), con le correzioni suggerite durante la \textit{Revisione dei Requisiti}.
+	\textbf{Periodo}: dal 24-01-2017 al 03-02-2017.
+	\\ Questo periodo inizia in concomitanza con la \textit{Revisione dei Requisiti} e termina con una \gloss{milestone} interna che corrisponde all'inizio della \textit{Progettazione Architetturale}. In questo periodo, il gruppo mira ad integrare la documentazione precedentemente prodotta (in modo particolare l'\textit{Analisi dei Requisiti}), con le correzioni suggerite durante la \textit{Revisione dei Requisiti}.
 	[Gantt eccetera]
 	\subsubsection{Progettazione Architetturale}
-	\textbf{Periodo}: dal xx-02-2017 al 06-03-2017.	
-	\\ Questo periodo inizia subito dopo \textit{Analisi dei Requisiti Incrementale} e si conclude con la consegna dei documenti per la 
-	\textit{Revisione di Progettazione}.
-	La \textit{Progettazione Architetturale} prevede la stesura della progettazione ad alto  livello e predeve lo svolgimento delle seguenti attività:
+	\textbf{Periodo}: dal 03-02-2017 al 06-03-2017.	
+	\\ Questo periodo inizia subito dopo \textit{Analisi dei Requisiti Incrementale} e si conclude con la consegna dei documenti per la \textit{Revisione di Progettazione}. La \textit{Progettazione Architetturale} prevede la stesura della progettazione ad alto  livello e predeve lo svolgimento delle seguenti attività:
 	\begin{itemize}
 		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti della \textit{Progettazione Architetturale};
 		\item \textbf{Specifica Tecnica}: in questa attività viene stilato questo documento che descrive le scelte progettuali ad alto livello che il prodotto dovrà rispettare.
 	\end{itemize}
 	[Gantt eccetera]
 	\subsubsection{Progettazione di Dettaglio e Codifica}
-	\textbf{Periodo}: dal 07-03-2017 al 11-04-2017.	
-	\\ Questo perido inizia subito dopo la \textit{Progettazione Architetturale} e si conclude con la consegna dei documenti per la \textit{Revisione di Qualifica"}.
-	La \textit{Progettazione di Dettaglio e Codifica} prevede la stesura del \textit{Definizione di Prodotto} e successivamente si inizierà
-	con la fase di codifica.
-	Le attività da svolgere sono le seguenti:
+	\textbf{Periodo}: dal 06-03-2017 al 11-04-2017.	
+	\\ Questo perido inizia subito dopo la \textit{Progettazione Architetturale} e si conclude con la consegna dei documenti per la \textit{Revisione di Qualifica"}. La \textit{Progettazione di Dettaglio e Codifica} prevede la stesura del \textit{Definizione di Prodotto} e successivamente si inizierà con la fase di codifica. Le attività da svolgere sono le seguenti:
 	\begin{itemize}
 		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti basandosi sui risultati della \textit{Revisione di Prodotto}; 
 		\item \textbf{Definizione di Prodotto}: in questa attività viene stilato questo documento che contiene la struttura e la relazione tra i vari componenti del prodotto, in base a quanto riportato nel documento \textit{Specifica Tecnica};
@@ -385,10 +371,8 @@ questi diagrami(es milestone ecc)".
 	\end{itemize}
 	[Gantt eccetera]
 	\subsubsection{Verifica e Validazione}
-	\textbf{Periodo}: dal 12-04-2017 al 14-05-2017.
-	\\ Questo perido inizia subito dopo la \textit{Progettazione di Dettaglio e Codifica} e si conclude con la consegna del prodotto finale alla \textit{Revisione di Accettazione}.
-	In questo periodo vengono effettuati i test del software, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\textit{Analisi dei Requisiti}.
-	Le attività da svolgere sono:
+	\textbf{Periodo}: dal 11-04-2017 al 14-05-2017.
+	\\ Questo perido inizia subito dopo la \textit{Progettazione di Dettaglio e Codifica} e si conclude con la consegna del prodotto finale alla \textit{Revisione di Accettazione}. In questo periodo vengono effettuati i test del software, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\textit{Analisi dei Requisiti}. Le attività da svolgere sono:
 	\begin{itemize}
 		\item \textbf{Test}: effettuare dei test per il collaudo del sistema;
 		\item \textbf{Incremento e Verifica dei Documenti}: in questa attività verranno incrementati verificati tutti i documenti, basandosi sui risultati della \textit{Revisione di Qualifica}.
