lavorato sul glossario

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
@@ -11,6 +11,8 @@
 \dest{Tutti i membri del gruppo}
 \title{Norme di progetto}
 
+
+
 \begin{document}
 \maketitle
 \include{diario}
@@ -82,6 +84,7 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 		\item un requisito padre se presente;
 		\item la fonte da cui deriva;
 		\item se è stato effettivamente implementato.
+		\end{itemize}
 		\paragraph{Casi d'uso}
 		Ogni caso d'uso viene identificato nel seguente modo:
 		\centerline{UCx}
@@ -234,10 +237,10 @@ Per gestire la configurazione del software si è scelto di utilizzare il sistema
 
 %%% Processi organizzativi
 
-\section{Processi organizzativi}
+\section{Processi organizzativi} \dots
 
-\subsection{Gestione organizzativa}
+\subsection{Gestione organizzativa} \dots
 
-\subsection{Formazione}
+\subsection{Formazione} \dots
 
 \end{document}
