--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -15,7 +15,7 @@
 \newcommand{\MM}{Marco Meneghetti}
 \newcommand{\LS}{Luca Sgambaro}
 \newcommand{\AZ}{Alberto Zanatta}
-\newcommand{\GR}{Alberto Zanatta, Giorgio Giuffrè, Luca Bergamin, Luca Sgambaro, Marco Meneghetti, Paolo Baracco}
+\newcommand{\ALL}{Tutti i membri del gruppo \hx}
 
 % Professori e committente
 \newcommand{\TV}{prof. Tullio Vardanega}
