--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -379,15 +379,15 @@ questi diagrami(es milestone ecc)".
 	Le attività da svolgere sono le seguenti:
 	\begin{itemize}
 		\item \textbf{Incremento dei Documenti}: in questa attività verranno incrementati tutti i documenti basandosi sui risultati della \textit{Revisione di Prodotto}; 
-		\item \textbf{Deﬁnizione di Prodotto o Specifica Tecnica}: blabla;
-		\item \textbf{Codiﬁca}: in questa attività si procede allo sviluppo del codice del software da parte dei programmatori, attenendosi a quanto è riportato nella \textit{Deﬁnizione di Prodotto}; 
+		\item \textbf{Definizione di Prodotto o Specifica Tecnica}: blabla;
+		\item \textbf{Codifica}: in questa attività si procede allo sviluppo del codice del software da parte dei programmatori, attenendosi a quanto è riportato nella \textit{Definizione di Prodotto}; 
 		\item \textbf{Manuale Utente}: in questa attività si crea il documento destinato all'utente finale, che ha lo scopo di fornire le linee guida per il corretto utilizzo del software.
 	\end{itemize}
 	[Gantt eccetera]
 	\subsubsection{Verifica e Validazione}
 	\textbf{Periodo}: dal 18-04-2017 al 15-05-2017.
 	\\ Questo perido inizia subito dopo la \textit{Progettazione di Dettaglio e Codifica} e si conclude con la consegna del prodotto finale alla \textit{Revisione di Accettazione}.
-	In questo periodo vengono effettuati i test del sowtfare, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\testit{Analisi dei Requisiti}.
+	In questo periodo vengono effettuati i test del sowtfare, atti a garantire un prodotto finale che soddisfi i requisiti contenuti nell'\textit{Analisi dei Requisiti}.
 	Le attività da svolgere sono:
 	\begin{itemize}
 		\item \textbf{Test}: effettuare dei test per il collaudo del sistema;
