--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -2,7 +2,7 @@
 % da usare tramite il comando \usepackage{../../util/hx-macro}
 
 % Progetto
-\newcommand{\proj}{SWEDesigner}
+\newcommand{\proj}{\emph{SWEDesigner}}
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
@@ -24,7 +24,7 @@
 \newcommand{\ZU}{Zucchetti S.P.A.}
 
 % Segnatura dei termini nel glossario
-\newcommand{\gloss}[1]{\emph{#1}\ped{$\gamma$}}
+\newcommand{\gloss}[1]{\textsc{#1}\ped{$\gamma$}}
 
 % Struttura del diario delle modifiche
 \newenvironment{diario}{
